--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@ var HouseNavBendiTxt = {
         <div class="area topad channel_relative_2016">
             <!--16体育首页顶通-->
             <a href="https://www.3ge888.com?TSN=15287&LangID=1">
-<img border="0" src="./980x90" alt="3g888" width="980" height="90"></a></p>
+<img border="0" src="./980x90.gif" alt="3g888" width="980" height="90"></a></p>
             <span class="channel_ad_2016"><h1>3g888 logo</h1></span>
         </div>
         <!-- AD 顶部通栏 end -->
@@ -1161,7 +1161,7 @@ var HouseNavBendiTxt = {
     <div class="clearfix area">
         
         <a href="https://www.3ge888.com?TSN=15288&LangID=1">
-<img  border="0" src="./980x90" alt="3g888" width="980" height="90"></a></p>
+<img  border="0" src="./980x90.gif" alt="3g888" width="980" height="90"></a></p>
         <!--红彩广告-->
 
 <!--其他广告 宽高：300*30-->
